# prometheus-client-load-test

./: Main.hs  prometheus-client-load-test.cabal  run.sh  stack.yaml
prometheus-haskell/prometheus-client/: prometheus-client.cabal
prometheus-haskell/prometheus-client/src/Prometheus/Metric/: Counter.hs
