name:                prometheus-client-load-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable prometheus-client-load-test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , prometheus-client
  ghc-options:       -Wall -threaded -with-rtsopts=-N
                      
